--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       margin: 0;
       padding: 0;
       font-family: Verdana, sans-serif;
-      background: #fafafa;
+      background: ##3f3f3f;
       color: #333;
       line-height: 1.5;
       text-transform: lowercase;
@@ -127,6 +127,12 @@
         </a>
         <a href="photos/2025-04-12-0036.jpg" class="glightbox thumb">
           <img src="photos/thumbs/2025-04-12-0036.jpg" alt="2025-04-12-0036" loading="lazy">
+        </a>        
+        <a href="photos/2025-03-29-0060.jpg" class="glightbox thumb">
+          <img src="photos/thumbs/2025-03-29-0060.jpg" alt="2025-03-29-0060" loading="lazy">
+        </a>
+        <a href="photos/2025-03-27-0053.jpg" class="glightbox thumb">
+          <img src="photos/thumbs/2025-03-27-0053.jpg" alt="2025-03-27-0053" loading="lazy">
         </a>
         <!-- Add more thumbnails as needed -->
       </div>
