--- a/gallery.html
+++ b/gallery.html
@@ -126,6 +126,12 @@
       <a href="photos/2025-04-12-0036.jpg" class="glightbox thumb">
         <img src="photos/thumbs/2025-04-12-0036.jpg" alt="2025-04-12-0036" loading="lazy">
       </a>
+      <a href="photos/2025-03-29-0060.jpg" class="glightbox thumb">
+        <img src="photos/thumbs/2025-03-29-0060.jpg" alt="2025-03-29-0060" loading="lazy">
+      </a>
+      <a href="photos/2025-03-27-0053.jpg" class="glightbox thumb">
+        <img src="photos/thumbs/2025-03-27-0053.jpg" alt="2025-03-27-0053" loading="lazy">
+      </a>
       <!-- Add more thumbnails here following the same pattern -->
     </div>
 
